glx/testdata/invalid/person-broken-reference.glx
# Invalid: References non-existent relationship
persons:
  person-12345678:
    properties:
      primary_name: "Test Person"
    relationships:
      - rel-nonexistent
